<resources>
    <string name="app_name">Java test</string>
    <string name="isTrue">True</string>
    <string name="isTruenot">False</string>
    <string name="headline">Test your Java skills?</string>
    <string name="question1">1. Java keywords are?</string>
    <string name="question2">2. What is the meaning of the return data type void?</string>
    <string name="question3">3. Is the result true or false? \n \n (x = 5, y = 0, z = 8) \n (x &gt;= 0 &amp;&amp; x &lt; 10) || (y != 0 || z &lt; 10)</string>
    <string name="question4">4. After the end of the cycle the variable will be? \n\n int myVariable = 0; \n for (int i = 0; i &lt;= 8; i += 2) { \n myVariable += i; \n }</string>
    <string name="question1answer1">this</string>
    <string name="question1answer2">throw</string>
    <string name="question1answer3">show</string>
    <string name="question2answer1">empty memory space is returned</string>
    <string name="question2answer2">void is not supported in Java</string>
    <string name="question2answer3">void returns no data type</string>
    <string name="question4hint">Type result here</string>
    <string name="Reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="javaQuestion1">\n Question 1:\t </string>
    <string name="javaQuestion2">\n Question 2:\t</string>
    <string name="javaQuestion3">\n Question 3:\t</string>
    <string name="javaQuestion4">\n Question 4:\t</string>
    <string name="javaScore">\n Score:\t\t</string>
    <string name="javaFrom">\t from 4</string>
    <string name="javaResult1">\n Amazing result - all correct.</string>
    <string name="javaResult2">\n Almost correct - one mistake.</string>
    <string name="javaResult3">\n Not bad - two mistakes</string>
    <string name="javaResult4">\n Your results could be better :-( - three mistakes</string>
    <string name="javaResult5">\n You should learn more - four mistakes</string>
    </resources>

